@@ -17,6 +17,12 @@ root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
+# sitemap
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
+
 # Directory
 source_dir: source
 public_dir: public
