@@ -9,6 +9,7 @@
     "hexo": "^3.1.0",
     "hexo-deployer-git": "0.0.4",
     "hexo-generator-archive": "^0.1.2",
+    "hexo-generator-baidu-sitemap": "^0.1.2",
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-feed": "^1.0.3",
     "hexo-generator-index": "^0.1.2",
