@@ -1,3 +1,6 @@
+v2016-01-16
+  * Add sitemap for baidu
+
 v2016-01-15
   * New post "可能要换工作了"
 
